[gd_scene load_steps=6 format=3 uid="uid://3506da8rupwo"]

[ext_resource type="Script" uid="uid://d3lfpalu26g13" path="res://Scripts/UI/PermanentUpgradesMenu/double_jump_slot.gd" id="1_hwsol"]
[ext_resource type="Texture2D" uid="uid://cavse8ld5bby8" path="res://Textures/Crafting/crafting_slot_selected.png" id="2_8tkm3"]
[ext_resource type="Texture2D" uid="uid://qyvcg1lkbbak" path="res://Textures/Crafting/crafting_slot_background.png" id="3_jlgkx"]
[ext_resource type="Texture2D" uid="uid://b384sxw2wpbjc" path="res://Textures/upgrades/upgrade_icon_double_jump.png" id="4_8tkm3"]
[ext_resource type="Texture2D" uid="uid://bxbcn11k4i3i2" path="res://Textures/soul.png" id="4_h0d66"]

[node name="DoubleJumpSlot" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hwsol")

[node name="SelectedBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(380, 66)
scale = Vector2(10, 6)
texture = ExtResource("2_8tkm3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(380, 66)
scale = Vector2(10, 6)
texture = ExtResource("3_jlgkx")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(66, 66)
scale = Vector2(2, 2)
texture = ExtResource("4_8tkm3")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 36.0
offset_right = 333.0
offset_bottom = 96.0
text = "Double Jump"
vertical_alignment = 1

[node name="FromTo" type="Label" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 36.0
offset_right = 550.0
offset_bottom = 96.0
vertical_alignment = 1

[node name="Price" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 36.0
offset_right = 730.0
offset_bottom = 96.0
vertical_alignment = 1

[node name="SoulsSprite" type="Sprite2D" parent="."]
position = Vector2(590, 66)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_h0d66")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 760.0
offset_bottom = 132.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
